--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
-<body>
+<head>
+<script src="/socket.io/socket.io.js"></script>
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="app.css" rel="stylesheet">
+
+</head>
+<body id="app">
 <!-- this is blank intintionally and will be filled by the applicaiton -->
 </body>
 <script src="app.js"></script>
