--- a/resources/main.html
+++ b/resources/main.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <body>
-    <header>
-      <h1>Header placeholder</h1>
-      <ul id="navigation">
-        <li class="nav-item"><a href="#"><h1>Placeholder</h1></a></li>
-      </ul>
-    </header>
-    <div class="content">place holder</div>
+    <div class="box">
+      <div class="container-1">
+          <span class="icon"><i class="fa fa-search"></i></span>
+          <input type="search" id="search" placeholder="Search..." />
+      </div>
+    </div>
+    <div class="content"></div>
   </body>
 </html>
